<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">All Document Reader</string>
    <string name="splash_subtitle">View all documents in one place</string>
    <string name="language">Language</string>
    <string name="language_default">Default</string>
    <string name="done">Done</string>
    <string name="onb_title_1">All-in-one\nDocument Reader</string>
    <string name="onb_title_2">Professional\nPDF Editor</string>
    <string name="onb_title_3">Easy &amp; Practical\nTemplates</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="nav_all_files">All files</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_settings">Settings</string>
    <string name="cat_all">All</string>
    <string name="cat_pdf">PDF</string>
    <string name="cat_word">Word</string>
    <string name="cat_excel">Excel</string>
    <string name="cat_ppt">PPT</string>
    <string name="cat_txt">TXT</string>
    <string name="cat_image">Image</string>
    <string name="cat_directories">Directories</string>
    <plurals name="files_count">
        <item quantity="one">%d file</item>
        <item quantity="other">%d files</item>
    </plurals>
    <string name="recent">Recent</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="empty">Empty</string>
    <string name="loading_files">Loading files…</string>
    <string name="coach_click_folders">Click the folders above to view</string>
    <string name="ok">OK</string>
    <string name="discover_new_feature">Discover new feature:</string>
    <string name="create_pdf">Create PDF</string>
    <string name="premium">Premium</string>
    <string name="permission_title">Allow access to files</string>
    <string name="permission_message">To read your PDF, Word, Excel, PPT and TXT files, please allow access to all files on this device.</string>
    <string name="allow">Allow</string>
    <string name="not_now">Not now</string>
    <string name="permission_needed_hint">Allow file access to see your documents</string>
    <string name="grant_access">Grant access</string>
    <string name="search_hint">Search files</string>
    <string name="no_files_found">No files found</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_date">Date modified</string>
    <string name="sort_name">Name</string>
    <string name="sort_size">Size</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="add_bookmark">Add to bookmarks</string>
    <string name="remove_bookmark">Remove from bookmarks</string>
    <string name="remove_from_recent">Remove from recent</string>
    <string name="file_info">File info</string>
    <string name="file_info_path">Path</string>
    <string name="file_info_size">Size</string>
    <string name="file_info_modified">Modified</string>
    <string name="no_app_to_open">No app found to open this file</string>
    <string name="file_not_found">File no longer exists</string>
    <string name="bookmark_added">Added to bookmarks</string>
    <string name="bookmark_removed">Removed from bookmarks</string>
    <string name="storage_usage">%1$s/%2$s</string>
    <string name="internal_storage">Internal storage</string>
    <string name="empty_folder">This folder is empty</string>
    <string name="create_new">Create new</string>
    <string name="images_to_pdf">Images to PDF</string>
    <string name="scan_document">Scan document</string>
    <string name="new_text_file">New TXT file</string>
    <string name="coming_soon">Coming in the next update</string>
    <string name="tools_title">Tools</string>
    <string name="settings_title">Settings</string>
    <string name="settings_share_app">Share app</string>
    <string name="settings_rate">Rate us</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_privacy">Privacy policy</string>
    <string name="settings_version">Version %1$s</string>
    <string name="tool_merge_pdf">Merge PDF</string>
    <string name="tool_split_pdf">Split PDF</string>
    <string name="tool_image_to_pdf">Image to PDF</string>
    <string name="tool_lock_pdf">Lock PDF</string>
    <string name="tool_unlock_pdf">Unlock PDF</string>
    <string name="tool_compress_pdf">Compress PDF</string>
    <string name="tool_scan">Scanner</string>
    <string name="tool_templates">Templates</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="all_files_title">All files</string>
    <string name="select">Select</string>
    <string name="filter">Filter</string>
    <string name="selected_count">%d selected</string>
    <string name="select_all">Select all</string>
    <string name="search_for_files">Search for files…</string>
    <string name="cancel">Cancel</string>
    <string name="filter_by">Filter by</string>
    <string name="file_size">File size</string>
    <string name="sort_date_short">Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="rename">Rename</string>
    <string name="to_home_screen">To home\nscreen</string>
    <string name="delete">Delete</string>
    <string name="storage_path">Storage path</string>
    <string name="last_modified">Last modified</string>
    <string name="recycle_title">Move to recycle bin or delete?</string>
    <string name="recycle_message">Files in the recycle bin can be restored within 30 days.</string>
    <string name="move_to_recycle_bin">Move to recycle bin</string>
    <string name="delete_directly">Delete directly</string>
    <plurals name="deleted_count">
        <item quantity="one">%d file deleted</item>
        <item quantity="other">%d files deleted</item>
    </plurals>
    <plurals name="moved_to_bin_count">
        <item quantity="one">%d file moved to recycle bin</item>
        <item quantity="other">%d files moved to recycle bin</item>
    </plurals>
    <string name="delete_failed">Some files could not be deleted</string>
    <string name="rename_empty">Name cannot be empty</string>
    <string name="rename_invalid">Name contains invalid characters</string>
    <string name="rename_exists">A file with this name already exists</string>
    <string name="rename_failed">Could not rename this file</string>
    <string name="rename_done">Renamed</string>
    <string name="select_files_first">Select files first</string>
    <string name="permission_required">Permission required</string>
    <string name="shortcut_permission_message"><![CDATA[To add files to home screen, we need the <font color=\"#0A5FD9\">\"Home screen shortcuts\"</font> permission.]]></string>
    <string name="shortcut_added">Added to home screen</string>
    <string name="shortcut_not_supported">Your launcher doesn\'t support home screen shortcuts</string>
    <string name="rate_title"><![CDATA[Do you like <font color=\"#0A5FD9\">our app</font>?]]></string>
    <string name="rate_subtitle">Your rating means a lot to us!</string>
    <string name="rate_best">The best we can get</string>
    <string name="rate">Rate</string>
    <string name="rate_thanks">Thanks for your feedback!</string>
    <string name="storage">Storage</string>
    <string name="all_documents">All documents</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="recently_added">Recently added</string>
    <string name="restore">Restore</string>
    <string name="restored">Restored</string>
    <string name="restore_failed">Could not restore (a file with the same name may already exist)</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="empty_recycle_bin">Empty bin</string>
    <string name="empty_recycle_bin_confirm">Permanently delete all files in the recycle bin?</string>
    <plurals name="days_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <string name="unsupported_title">File type not supported</string>
    <string name="unsupported_message">Sorry, we currently do not support this file type.\nBut we are constantly working hard to optimize the app and will support more file types later.</string>
    <string name="faq">FAQ</string>
    <string name="faq_message">Opened in the app: PDF, Word (.docx) and TXT.\n\nExcel, PowerPoint and images open with another app on your phone.\n\nOther file types (APK, video, system files…) are not supported yet.</string>
    <string name="loading">Loading…</string>
    <string name="convert">Convert</string>
    <string name="pdf_to_word">PDF to Word</string>
    <string name="converting_progress">Converting… (%d%%)</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="convert_failed">Conversion failed</string>
    <string name="pages">Pages</string>
    <string name="print">Print</string>
    <string name="edit">Edit</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="mode_vertical">Vertical</string>
    <string name="mode_horizontal">Horizontal</string>
    <string name="rotate">Rotate</string>
    <string name="search">Search</string>
    <string name="invert">Invert</string>
    <string name="page_chip">%1$d / %2$d</string>
    <string name="go_to_page">Go to page</string>
    <string name="jump_tip">Tap here to jump to the page directly</string>
    <string name="search_in_document">Search in document</string>
    <string name="pdf_password_protected">This PDF is password protected or damaged</string>
    <string name="drag_hint">Long press and drag to reorder</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="insert">Insert</string>
    <string name="extract">Extract</string>
    <string name="setup">Setup</string>
    <string name="blank_pages">Blank pages</string>
    <string name="images">Images</string>
    <string name="delete_confirm">Delete confirm</string>
    <string name="delete_pages_message"><![CDATA[Are you sure you want to delete the <font color=\"#0A5FD9\">%d</font> selected page(s)?]]></string>
    <string name="deleted_successfully">Deleted successfully</string>
    <string name="pdf_needs_page">A PDF needs at least one page</string>
    <string name="duplicate">Duplicate</string>
    <string name="move_to_start">Move to start</string>
    <string name="move_to_end">Move to end</string>
    <string name="discard_title">Discard changes?</string>
    <string name="discard_message">Your page changes have not been saved.</string>
    <string name="discard">Discard</string>
    <string name="saving">Saving…</string>
    <string name="extracting">Extracting pages…</string>
    <string name="choose_cropping_method">Choose cropping method</string>
    <string name="crop_method_hint">You can adjust it at any time in \"Scan settings\".</string>
    <string name="auto_crop">Auto crop</string>
    <string name="no_crop">No crop</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="enter_text">Enter text</string>
    <string name="clear">Clear</string>
    <string name="feedback_or_suggestion">Feedback or suggestion</string>
    <string name="faq_view_edit">View &amp; edit</string>
    <string name="faq_manage">Manage files</string>
    <string name="faq_about_app">About app</string>
    <string name="tpl_save">Save</string>
    <string name="tpl_select_format">Select a format</string>
    <string name="tpl_png">PNG</string>
    <string name="tpl_png_desc">Suitable for files with images</string>
    <string name="tpl_jpg">JPG</string>
    <string name="tpl_jpg_desc">Suitable for smaller files</string>
    <string name="tpl_pdf">PDF</string>
    <string name="tpl_pdf_desc">Suitable for most files</string>
</resources>